# cpp-labs-and-homeworks

hw_01/: Makefile
hw_01/include/: bmp.h  stego.h
hw_01/src/: bmp.c  main.c  stego.c
hw_02/: Makefile
hw_02/include/: Board.h  BoardTest.h  BoardView.h  GameController.h  NcursesBoardView.h  StdioBoardView.h  Test.h
hw_02/src/: Board.cpp  GameController.cpp  NcursesBoardView.cpp  StdioBoardView.cpp  main.cpp
hw_02/test/: BoardTest.cpp  Test.cpp  mainTest.cpp
hw_03/: CMakeLists.txt
hw_03/include/: Bits.h  CLI.h  FrequencyTable.h  HuffmanArchiver.h  HuffmanTree.h  IO.h  Trie.h
hw_03/src/: Bits.cpp  CLI.cpp  FrequencyTable.cpp  HuffmanArchiver.cpp  HuffmanTree.cpp  IO.cpp  Trie.cpp  main.cpp
hw_03/test/: TestBits.cpp  TestCLI.cpp  TestFrequencyTable.cpp  TestHuffmanArchiver.cpp  TestHuffmanTree.cpp  TestIO.cpp  TestTrie.cpp
lab_02/: Makefile
lab_02/include/: str.h  test_str.h
lab_02/src/: str.c  test.c  test_str.c
lab_03/: Makefile
lab_03/include/: clist.h
lab_03/src/: clist.c  main.c
lab_04/: Makefile
lab_04/include/: mergesort.h
lab_04/src/: main.c  mergesort.c
lab_05/: Makefile
lab_05/include/: clist.h  point_list.h
lab_05/src/: clist.c  main.c  point_list.c
lab_09/: Makefile
lab_09/include/: matrix.hpp  shared_ptr.hpp
lab_09/src/: main.cpp  shared_ptr.cpp
lab_10/: Makefile
lab_10/include/: Circle.hpp  Figure.hpp  Rectangle.hpp  Scheme.hpp
lab_10/src/: Circle.cpp  Figure.cpp  Rectangle.cpp  Scheme.cpp  main.cpp
lab_11/: Makefile
lab_11/include/: bin_manip.h  (+1 more)
lab_12/: Makefile
lab_13/: Makefile
lab_14/: Makefile
(+16 files in other folders)
